--- a/About/css/about900px.css
+++ b/About/css/about900px.css
@@ -35,6 +35,7 @@
   height: auto;  
   display: inline-block;
 }
+
 /*hamburger menu*/
 .menu-icon {
   display: block;
@@ -76,8 +77,16 @@
 li .nav-a {
   text-decoration: none;
   color:#333;
-  font-family: "メイリオ";
-  font-size: 2.222vw;
+  font-family: "meiryo", Times;
+  font-size: 4.444vw;
+}
+
+li .nav-a:link, li .nav-a:visited {
+  color: black;
+}
+
+li .nav-a:active {
+  color:#FEF9EE;
 }
 
  .topnav {
@@ -104,37 +113,37 @@ li .nav-a {
 
 /* The navigation menu links */
 .topnav.responsive #firstchild {
-    padding: 14vw 0.741vw 2vw;
+    padding: 14vw 0.541vw 2vw;
    
-    font-family: "メイリオ";
-    font-size: 2.222vw;
+    font-family: "meiryo", Times;
+    font-size: 4.444vw;
     
     display: block;
     transition: 0.3s;
     border-bottom: 1px solid #FF4040;
-    margin: 0px 30px;
+    margin: 0px 20px;
   }
   .topnav.responsive #lastchild {
-    padding: 2vw 0.741vw 2vw;
+    padding: 2vw 0.541vw 2vw;
    
-    font-family: "メイリオ";
-    font-size: 2.222vw;
+    font-family: "meiryo", Times;
+    font-size: 4.444vw;
     border-bottom: 1px solid #FF4040;
     display: block;
     transition: 0.3s;
-    margin: 0px 30px;
+    margin: 0px 20px;
   }
   
   .topnav.responsive  #second,.topnav.responsive #third, .topnav.responsive #fourth {
-    padding: 2vw 0.741vw 2vw;
+    padding: 2vw 0.541vw 2vw;
    
-    font-family: "メイリオ";
-    font-size: 2.222vw;
+    font-family: "meiryo", Times;
+    font-size: 4.444vw;
     
     display: block;
     transition: 0.3s;
     border-bottom: 1px solid #FF4040;
-    margin: 0px 30px;
+    margin: 0px 20px;
   }
 /*our serivce content*/
 .dropdown {
@@ -145,8 +154,8 @@ li .nav-a {
 #dropdown-content-mobile {
   display: none;
   background-color: #F4C1B8;
-  font-family: "メイリオ";
-  font-size: 16px;
+  font-family: "meiryo", Times;
+  font-size: 4.444vw;
   width: 250px;
   padding: 5px;
   overflow: visible;
@@ -154,10 +163,10 @@ li .nav-a {
 
 }
 .item {
-  padding: 2vw 0.741vw 2vw;
+  padding: 2vw 0.541vw 2vw;
  text-decoration: none;
-  font-family: "メイリオ";
-  font-size: 2vw;
+ font-family: "meiryo", Times;
+  font-size: 4vw;
   color: #333;
   transition: 0.3s;
   display: block;
@@ -165,9 +174,10 @@ li .nav-a {
 
 #fafacon{
   float: left;
-  line-height:16px;
-  font-size: 2.222vw;
+  line-height:4.2vw;
+  font-size: 4vw;
   vertical-align: middle;
+  padding-top: 3px;
 }
 #center {
   float: left;
@@ -182,22 +192,26 @@ li .nav-a {
 
 /* language button */
 .lang-switch {
-  padding-top: 70vw;
+  padding-top: 40vw;
   margin: 0 0;
   text-align: center;
+  
+ 
 }
 .lang-switch a {
   text-decoration: none;
-  font-family: "メイリオ";
-  font-size: 2vw;
+  font-family: "meiryo", Times;
+  font-size: 4vw;
   color:#333;
+
 }
 .opabox {
   width: 100%;
-  height: 5.224vw;
+  height: 8.224vw;
   background-color: rgba(189, 153, 147, 0.3);
+  vertical-align: middle;
+  padding-top: 2vw;
 }
-
 #whataspp-QR, .dropdownT {
   display: none;
 }
@@ -234,9 +248,7 @@ li .nav-a {
 }
 
 .box {
-  padding: 15px;
-  font-size: 17px;
-  font-family: "ms gothic", Arial, Helvetica, sans-serif;
+  font-family: "meiryo", Times;
   line-height: 1.4em;
   font-weight:500;
   text-align: left;
@@ -256,19 +268,19 @@ li .nav-a {
   background-color: #FEF9EE;
 }
 h1 {
-  font-weight: 500;
-  font-family: Helvetica, sans-serif;
-  font-size: 40px;
-  padding:10px;
+  font-weight: 600;
+  font-family: "meiryo", Times;
+  font-size: 9.2vw;
+  padding:2.7vw;
 }
 .c {
   grid-area: 3/1/4/2;
-  padding: 30px 70px;
+  padding: 2.7vw 5vw;
   background-color: #f4c1b890;
 }
 .text {
-  font-size: 15px;
-  font-family: "メイリオ",Helvetica, sans-serif;
+  font-size: 3.5vw;
+  font-family: "meiryo", Times;
   line-height: 2em;
   text-align: left;
 }
