--- a/careers/TL/css/TL900px.css
+++ b/careers/TL/css/TL900px.css
@@ -35,6 +35,7 @@
   height: auto;  
   display: inline-block;
 }
+
 /*hamburger menu*/
 .menu-icon {
   display: block;
@@ -76,8 +77,16 @@
 li .nav-a {
   text-decoration: none;
   color:#333;
-  font-family: "メイリオ";
-  font-size: 2.222vw;
+  font-family: "meiryo", Times;
+  font-size: 4.444vw;
+}
+
+li .nav-a:link, li .nav-a:visited {
+  color: black;
+}
+
+li .nav-a:active {
+  color:#FEF9EE;
 }
 
  .topnav {
@@ -104,37 +113,37 @@ li .nav-a {
 
 /* The navigation menu links */
 .topnav.responsive #firstchild {
-    padding: 14vw 0.741vw 2vw;
+    padding: 14vw 0.541vw 2vw;
    
-    font-family: "メイリオ";
-    font-size: 2.222vw;
+    font-family: "meiryo", Times;
+    font-size: 4.444vw;
     
     display: block;
     transition: 0.3s;
     border-bottom: 1px solid #FF4040;
-    margin: 0px 30px;
+    margin: 0px 20px;
   }
   .topnav.responsive #lastchild {
-    padding: 2vw 0.741vw 2vw;
+    padding: 2vw 0.541vw 2vw;
    
-    font-family: "メイリオ";
-    font-size: 2.222vw;
+    font-family: "meiryo", Times;
+    font-size: 4.444vw;
     border-bottom: 1px solid #FF4040;
     display: block;
     transition: 0.3s;
-    margin: 0px 30px;
+    margin: 0px 20px;
   }
   
   .topnav.responsive  #second,.topnav.responsive #third, .topnav.responsive #fourth {
-    padding: 2vw 0.741vw 2vw;
+    padding: 2vw 0.541vw 2vw;
    
-    font-family: "メイリオ";
-    font-size: 2.222vw;
+    font-family: "meiryo", Times;
+    font-size: 4.444vw;
     
     display: block;
     transition: 0.3s;
     border-bottom: 1px solid #FF4040;
-    margin: 0px 30px;
+    margin: 0px 20px;
   }
 /*our serivce content*/
 .dropdown {
@@ -145,8 +154,8 @@ li .nav-a {
 #dropdown-content-mobile {
   display: none;
   background-color: #F4C1B8;
-  font-family: "メイリオ";
-  font-size: 16px;
+  font-family: "meiryo", Times;
+  font-size: 4.444vw;
   width: 250px;
   padding: 5px;
   overflow: visible;
@@ -154,10 +163,10 @@ li .nav-a {
 
 }
 .item {
-  padding: 2vw 0.741vw 2vw;
+  padding: 2vw 0.541vw 2vw;
  text-decoration: none;
-  font-family: "メイリオ";
-  font-size: 2vw;
+ font-family: "meiryo", Times;
+  font-size: 4vw;
   color: #333;
   transition: 0.3s;
   display: block;
@@ -165,9 +174,10 @@ li .nav-a {
 
 #fafacon{
   float: left;
-  line-height:16px;
-  font-size: 2.222vw;
+  line-height:4.2vw;
+  font-size: 4vw;
   vertical-align: middle;
+  padding-top: 3px;
 }
 #center {
   float: left;
@@ -182,22 +192,26 @@ li .nav-a {
 
 /* language button */
 .lang-switch {
-  padding-top: 70vw;
+  padding-top: 40vw;
   margin: 0 0;
   text-align: center;
+  
+ 
 }
 .lang-switch a {
   text-decoration: none;
-  font-family: "メイリオ";
-  font-size: 2vw;
+  font-family: "meiryo", Times;
+  font-size: 4vw;
   color:#333;
+
 }
 .opabox {
   width: 100%;
-  height: 5.224vw;
+  height: 8.224vw;
   background-color: rgba(189, 153, 147, 0.3);
+  vertical-align: middle;
+  padding-top: 2vw;
 }
-
 #whataspp-QR, .dropdownT {
   display: none;
 }
@@ -255,9 +269,9 @@ li .nav-a {
 }
 pre {
   white-space: pre-wrap;
-  line-height: 100%;
-  font-size: 10px;
-  font-family: "メイリオ";
+  line-height: 1.4em;
+  font-size: 3vw;
+  font-family: "meiryo", Times;
 }
 /*.bg{
   background-image: url("/img/TL.png");
@@ -269,28 +283,29 @@ pre {
   background-color: #ccc;
 }*/
 .recruit {
-  font-size: 20px;
-  font-family: Helvetica, "ms gothic", Arial, sans-serif;
+  font-size: 6vw;
+  font-family: "meiryo", Times;
   font-weight:700;
   text-align: left;
 }
 .detail {
-  font-size: 15px;
-  font-family: Arial, Helvetica, sans-serif;
+  /*font-size: 15px;*/
+  font-family: "meiryo", Times;
   text-align: left;
 }
 
 .private {
-  font-size: 10px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2vw;;
+  font-family: "meiryo", Times;
   text-align: left;
   margin: 0 0;
   padding:0;
-  
+  line-height: 10px;
 }
 .whatsapp {
   margin: 0 0;
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 2vw;
 }
 
 .whatsapp a {
