--- a/careers/css/career900px.css
+++ b/careers/css/career900px.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
 }
+
 #page {
   overflow:hidden;
 }
@@ -34,6 +35,7 @@
   height: auto;  
   display: inline-block;
 }
+
 /*hamburger menu*/
 .menu-icon {
   display: block;
@@ -75,8 +77,16 @@
 li .nav-a {
   text-decoration: none;
   color:#333;
-  font-family: "メイリオ";
-  font-size: 2.222vw;
+  font-family: "meiryo", Times;
+  font-size: 4.444vw;
+}
+
+li .nav-a:link, li .nav-a:visited {
+  color: black;
+}
+
+li .nav-a:active {
+  color:#FEF9EE;
 }
 
  .topnav {
@@ -103,37 +113,37 @@ li .nav-a {
 
 /* The navigation menu links */
 .topnav.responsive #firstchild {
-    padding: 14vw 0.741vw 2vw;
+    padding: 14vw 0.541vw 2vw;
    
-    font-family: "メイリオ";
-    font-size: 2.222vw;
+    font-family: "meiryo", Times;
+    font-size: 4.444vw;
     
     display: block;
     transition: 0.3s;
     border-bottom: 1px solid #FF4040;
-    margin: 0px 30px;
+    margin: 0px 20px;
   }
   .topnav.responsive #lastchild {
-    padding: 2vw 0.741vw 2vw;
+    padding: 2vw 0.541vw 2vw;
    
-    font-family: "メイリオ";
-    font-size: 2.222vw;
+    font-family: "meiryo", Times;
+    font-size: 4.444vw;
     border-bottom: 1px solid #FF4040;
     display: block;
     transition: 0.3s;
-    margin: 0px 30px;
+    margin: 0px 20px;
   }
   
   .topnav.responsive  #second,.topnav.responsive #third, .topnav.responsive #fourth {
-    padding: 2vw 0.741vw 2vw;
+    padding: 2vw 0.541vw 2vw;
    
-    font-family: "メイリオ";
-    font-size: 2.222vw;
+    font-family: "meiryo", Times;
+    font-size: 4.444vw;
     
     display: block;
     transition: 0.3s;
     border-bottom: 1px solid #FF4040;
-    margin: 0px 30px;
+    margin: 0px 20px;
   }
 /*our serivce content*/
 .dropdown {
@@ -144,8 +154,8 @@ li .nav-a {
 #dropdown-content-mobile {
   display: none;
   background-color: #F4C1B8;
-  font-family: "メイリオ";
-  font-size: 16px;
+  font-family: "meiryo", Times;
+  font-size: 4.444vw;
   width: 250px;
   padding: 5px;
   overflow: visible;
@@ -153,10 +163,10 @@ li .nav-a {
 
 }
 .item {
-  padding: 2vw 0.741vw 2vw;
+  padding: 2vw 0.541vw 2vw;
  text-decoration: none;
-  font-family: "メイリオ";
-  font-size: 2vw;
+ font-family: "meiryo", Times;
+  font-size: 4vw;
   color: #333;
   transition: 0.3s;
   display: block;
@@ -164,9 +174,10 @@ li .nav-a {
 
 #fafacon{
   float: left;
-  line-height:16px;
-  font-size: 2.222vw;
+  line-height:4.2vw;
+  font-size: 4vw;
   vertical-align: middle;
+  padding-top: 3px;
 }
 #center {
   float: left;
@@ -181,22 +192,26 @@ li .nav-a {
 
 /* language button */
 .lang-switch {
-  padding-top: 70vw;
+  padding-top: 40vw;
   margin: 0 0;
   text-align: center;
+  
+ 
 }
 .lang-switch a {
   text-decoration: none;
-  font-family: "メイリオ";
-  font-size: 2vw;
+  font-family: "meiryo", Times;
+  font-size: 4vw;
   color:#333;
+
 }
 .opabox {
   width: 100%;
-  height: 5.224vw;
+  height: 8.224vw;
   background-color: rgba(189, 153, 147, 0.3);
+  vertical-align: middle;
+  padding-top: 2vw;
 }
-
 #whataspp-QR, .dropdownT {
   display: none;
 }
@@ -217,7 +232,7 @@ li .nav-a {
   color:#FF4040;
 }
 
-/*body*/
+/*---BODY---*/
 #bg {
   background-image: url("../img/BG careers.png");
   margin: 0 0;
@@ -237,14 +252,14 @@ li .nav-a {
 .wrapper {
   display: grid;
   grid-template-columns: 100%;
-  grid-template-rows: 80px 200px 50px 50px 200px 50px 50px 200px 50px 50px 200px 50px 150px;
+  grid-template-rows: 100px 200px 50px 50px 200px 50px 50px 200px 50px 50px 200px 50px 150px;
   /*border: 1px solid black;*/
   
 }
 .box {
   padding: 15px;
   font-size: 20px;
-  font-family: "ms gothic", Arial, Helvetica, sans-serif;
+  font-family: "meiryo", Times;
   font-weight:700;
  
   text-align: center;
@@ -269,7 +284,7 @@ li .nav-a {
 
 h1 {
   margin: 0px;
-  padding: 0px;
+  padding: 30px;
   /*line-height: 80px;
   vertical-align: text-bottom;*/
 }
@@ -367,7 +382,7 @@ h1 {
 
 .button {
   font-size: 16px;
-  font-family: "ms gothic", Arial, Helvetica, sans-serif;
+  font-family: "meiryo", Times;
   font-weight: bold;
   color:#FEF9EE;
   display: flex;
