--- a/inquiry/css/inquiry900px.css
+++ b/inquiry/css/inquiry900px.css
@@ -1,432 +1,446 @@
 * {
-    margin: 0;
+  margin: 0;
 }
 
 #page {
-    overflow:hidden;
-  }
-  /*---HEADER---*/
-  #logo {
-    width: 100%;
-    height: 20%;
-    display: block;
-    background-color: #fff9ee;
-    position: relative;
-    z-index: 2;
-  }
-  #img_inner {
-    width: 100%;
-    height: 10%;
-    display: inline-block;
-    /*padding: 0 0 0 5%;*/
-    background-color: #fff9ee;
-  }
-  #offset {
-    width: 6vw; 
-    height: auto;
-    display: inline-block;
-    position: relative;
-    left: 1vw;
-    top: -1vw;
-    padding: 0 1vw;
-  }
-  #flt {
-    width: 55%; 
-    height: auto;  
-    display: inline-block;
-  }
-  /*hamburger menu*/
-  .menu-icon {
-    display: block;
-    cursor: pointer;
-    float: right;
-    padding-right: 5vw;
-  }
+overflow:hidden;
+}
+/*---HEADER---*/
+#logo {
+width: 100%;
+height: 20%;
+display: block;
+background-color: #fff9ee;
+position: relative;
+z-index: 2;
+}
+#img_inner {
+width: 100%;
+height: 10%;
+display: inline-block;
+/*padding: 0 0 0 5%;*/
+background-color: #fff9ee;
+}
+#offset {
+width: 6vw; 
+height: auto;
+display: inline-block;
+position: relative;
+left: 1vw;
+top: -1vw;
+padding: 0 1vw;
+}
+#flt {
+width: 55%; 
+height: auto;  
+display: inline-block;
+}
+
+/*hamburger menu*/
+.menu-icon {
+display: block;
+cursor: pointer;
+float: right;
+padding-right: 5vw;
+}
+
+.bar1, .bar2, .bar3 {
+width: 35px;
+height: 5px;
+background-color: #333;
+margin: 6px 0;
+transition: 0.4s;
+}
+
+.change .bar1 {
+-webkit-transform: rotate(-45deg) translate(-9px, 6px);
+transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.change .bar2 {opacity: 0;}
+
+.change .bar3 {
+-webkit-transform: rotate(45deg) translate(-8px, -8px);
+transform: rotate(45deg) translate(-8px, -8px);
+}
+
+
+/*overlay nav in pcweb nav*/
+.gonav {
+overflow: visible;
+display: block;
+width: 100%;
+height: fit-content;
+}
+
+/* The side navigation menu */
+li .nav-a {
+text-decoration: none;
+color:#333;
+font-family: "meiryo", Times;
+font-size: 4.444vw;
+}
+
+li .nav-a:link, li .nav-a:visited {
+color: black;
+}
+
+li .nav-a:active {
+color:#FEF9EE;
+}
+
+.topnav {
+visibility: hidden;
+height: 0px;
+width: 100%;
+overflow: scroll;
+list-style: none;;
+}
+
+.topnav.responsive {
+height: 100%; /* 100% Full-height */
+width: 50vw; /* 0 width - change this with JavaScript */
+position: fixed; /* Stay in place */
+z-index: 99; /* Stay on top */
+visibility: visible;
+top: 0; /* Stay at the top */
+left: 0;
+background-color: #F4C1B8; /* Black*/
+overflow-x: hidden; /* Disable horizontal scroll */
+padding: 2.22vw;/*Place content 60px from the top */
+transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
+
+/* The navigation menu links */
+.topnav.responsive #firstchild {
+  padding: 14vw 0.541vw 2vw;
+ 
+  font-family: "meiryo", Times;
+  font-size: 4.444vw;
   
-  .bar1, .bar2, .bar3 {
-    width: 35px;
-    height: 5px;
-    background-color: #333;
-    margin: 6px 0;
-    transition: 0.4s;
-  }
+  display: block;
+  transition: 0.3s;
+  border-bottom: 1px solid #FF4040;
+  margin: 0px 20px;
+}
+.topnav.responsive #lastchild {
+  padding: 2vw 0.541vw 2vw;
+ 
+  font-family: "meiryo", Times;
+  font-size: 4.444vw;
+  border-bottom: 1px solid #FF4040;
+  display: block;
+  transition: 0.3s;
+  margin: 0px 20px;
+}
+
+.topnav.responsive  #second,.topnav.responsive #third, .topnav.responsive #fourth {
+  padding: 2vw 0.541vw 2vw;
+ 
+  font-family: "meiryo", Times;
+  font-size: 4.444vw;
   
-  .change .bar1 {
-    -webkit-transform: rotate(-45deg) translate(-9px, 6px);
-    transform: rotate(-45deg) translate(-9px, 6px);
-  }
-  
-  .change .bar2 {opacity: 0;}
-  
-  .change .bar3 {
-    -webkit-transform: rotate(45deg) translate(-8px, -8px);
-    transform: rotate(45deg) translate(-8px, -8px);
-  }
-  
-  
-  /*overlay nav in pcweb nav*/
-  .gonav {
-    overflow: visible;
-    display: block;
-    width: 100%;
-    height: fit-content;
-  }
-  
-  /* The side navigation menu */
-  li .nav-a {
-    text-decoration: none;
-    color:#333;
-    font-family: "メイリオ";
-    font-size: 2.222vw;
-  }
-  
-   .topnav {
-    visibility: hidden;
-    height: 0px;
-    width: 100%;
-    overflow: scroll;
-    list-style: none;;
-   }
-  
-   .topnav.responsive {
-    height: 100%; /* 100% Full-height */
-    width: 50vw; /* 0 width - change this with JavaScript */
-    position: fixed; /* Stay in place */
-    z-index: 99; /* Stay on top */
-    visibility: visible;
-    top: 0; /* Stay at the top */
-    left: 0;
-    background-color: #F4C1B8; /* Black*/
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding: 2.22vw;/*Place content 60px from the top */
-    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
-  }
-  
-  /* The navigation menu links */
-  .topnav.responsive #firstchild {
-      padding: 14vw 0.741vw 2vw;
-     
-      font-family: "メイリオ";
-      font-size: 2.222vw;
-      
-      display: block;
-      transition: 0.3s;
-      border-bottom: 1px solid #FF4040;
-      margin: 0px 30px;
-    }
-    .topnav.responsive #lastchild {
-      padding: 2vw 0.741vw 2vw;
-     
-      font-family: "メイリオ";
-      font-size: 2.222vw;
-      border-bottom: 1px solid #FF4040;
-      display: block;
-      transition: 0.3s;
-      margin: 0px 30px;
-    }
-    
-    .topnav.responsive  #second,.topnav.responsive #third, .topnav.responsive #fourth {
-      padding: 2vw 0.741vw 2vw;
-     
-      font-family: "メイリオ";
-      font-size: 2.222vw;
-      
-      display: block;
-      transition: 0.3s;
-      border-bottom: 1px solid #FF4040;
-      margin: 0px 30px;
-    }
-  /*our serivce content*/
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  
-  }
-  #dropdown-content-mobile {
-    display: none;
-    background-color: #F4C1B8;
-    font-family: "メイリオ";
-    font-size: 16px;
-    width: 250px;
-    padding: 5px;
-    overflow: visible;
-  
-  
-  }
-  .item {
-    padding: 2vw 0.741vw 2vw;
-   text-decoration: none;
-    font-family: "メイリオ";
-    font-size: 2vw;
-    color: #333;
-    transition: 0.3s;
-    display: block;
-  }
-  
-  #fafacon{
-    float: left;
-    line-height:16px;
-    font-size: 2.222vw;
-    vertical-align: middle;
-  }
-  #center {
-    float: left;
-  }
-  .ddc {
-    display: block;
-  }
-  #fafacon2 {
-    display: none;
-  }
-  
-  
-  /* language button */
-  .lang-switch {
-    padding-top: 70vw;
-    margin: 0 0;
-    text-align: center;
-  }
-  .lang-switch a {
-    text-decoration: none;
-    font-family: "メイリオ";
-    font-size: 2vw;
-    color:#333;
-  }
-  .opabox {
-    width: 100%;
-    height: 5.224vw;
-    background-color: rgba(189, 153, 147, 0.3);
-  }
-  
-  #whataspp-QR, .dropdownT {
-    display: none;
-  }
-  
-  /*---FOOTER---*/
-  #footer{
-    position:relative;
-    display:block;
-    text-align: center;
-    height: 100%;
-    line-height: 70px;
-    padding: 20px;
-    background-color: #fff9ee;
-    bottom: 0px;
-    margin: 0 auto;
-  }
-  #copyright {
-    color:#FF4040;
-  }
-  
-  
-  /*---BODY---*/
+  display: block;
+  transition: 0.3s;
+  border-bottom: 1px solid #FF4040;
+  margin: 0px 20px;
+}
+/*our serivce content*/
+.dropdown {
+position: relative;
+display: inline-block;
+
+}
+#dropdown-content-mobile {
+display: none;
+background-color: #F4C1B8;
+font-family: "meiryo", Times;
+font-size: 4.444vw;
+width: 250px;
+padding: 5px;
+overflow: visible;
+
+
+}
+.item {
+padding: 2vw 0.541vw 2vw;
+text-decoration: none;
+font-family: "meiryo", Times;
+font-size: 4vw;
+color: #333;
+transition: 0.3s;
+display: block;
+}
+
+#fafacon{
+float: left;
+line-height:4.2vw;
+font-size: 4vw;
+vertical-align: middle;
+padding-top: 3px;
+}
+#center {
+float: left;
+}
+.ddc {
+display: block;
+}
+#fafacon2 {
+display: none;
+}
+
+
+/* language button */
+.lang-switch {
+padding-top: 40vw;
+margin: 0 0;
+text-align: center;
+
+
+}
+.lang-switch a {
+text-decoration: none;
+font-family: "meiryo", Times;
+font-size: 4vw;
+color:#333;
+
+}
+.opabox {
+width: 100%;
+height: 8.224vw;
+background-color: rgba(189, 153, 147, 0.3);
+vertical-align: middle;
+padding-top: 2vw;
+}
+#whataspp-QR, .dropdownT {
+display: none;
+}
+
+/*---FOOTER---*/
+#footer{
+position:relative;
+display:block;
+text-align: center;
+height: 100%;
+line-height: 70px;
+padding: 20px;
+background-color: #fff9ee;
+bottom: 0px;
+margin: 0 auto;
+}
+#copyright {
+color:#FF4040;
+}
+
+
+/*---BODY---*/
 #body {
-    position: relative;
-    z-index: 0;
+  position: relative;
+  z-index: 0;
 }
 body, html {
-    height: 100%;
+  height: 100%;
 }
-  
+
 .parallax {
-    /* The image used */
-    background-image: url("../img/shutterstock_1676553514_blur.jpg");
-  
-    /* Full height */
-    height: 100%;
-  
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    z-index: 0;
+  /* The image used */
+  background-image: url("../img/shutterstock_1676553514_blur.jpg");
+
+  /* Full height */
+  height: 100%;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  z-index: 0;
 }
 .transp-box {
-    background-color: #f4c1b880;
-    height: auto;
-    /*position: relative;
-    z-index: 1;*/
+  background-color: #f4c1b880;
+  height: auto;
+  /*position: relative;
+  z-index: 1;*/
 }
 .transp-box_inner {
-    width: 85%;
-    height: 100%;
-    margin: 0 auto;
-    text-align: left;
-    display:block;  
-    /*position: relative;
-    z-index: 2;*/
+  width: 85%;
+  height: 100%;
+  margin: 0 auto;
+  text-align: left;
+  display:block;  
+  /*position: relative;
+  z-index: 2;*/
 }
 
 #contact {
-    font-size: 45px;
-    font-weight:600;
-    font-family: Arial, Helvetica, sans-serif;
-    line-height: 45px;
-    animation: swing-in-left-fwd 1.2s linear both;
-    padding: 15px 0px;
-    /*position: relative;
-    z-index: -1;*/
-    
+  font-size: 12vw;
+  font-weight:600;
+  font-family: "meiryo", Times;
+  line-height: 12vw;
+  animation: swing-in-left-fwd 1.2s linear both;
+  padding: 4.05vw 0px;
+  /*position: relative;
+  z-index: -1;*/
+  
 }
 #address {
-    font-size: 13px;
-    font-family: Arial, Helvetica, sans-serif;
-    line-height: 15px;
-    animation: swing-in-left-fwd 1.2s linear 0.3s both;
-    padding: 7px 0px;
-   /*position: absolute;
-    z-index: -1;*/
+  font-size: 13px;
+  font-family: "meiryo", Times;
+  line-height: 15px;
+  animation: swing-in-left-fwd 1.2s linear 0.3s both;
+  padding: 7px 0px;
+ /*position: absolute;
+  z-index: -1;*/
 }
 #whatsapp {
-    font-size: 13px;
-    font-family: Arial, Helvetica, sans-serif;
-    line-height: 20px;
-    animation: swing-in-left-fwd 1.2s linear 0.6s both;
-    padding: 10px 0px;
+  font-size: 13px;
+  font-family: "meiryo", Times;
+  line-height: 20px;
+  animation: swing-in-left-fwd 1.2s linear 0.6s both;
+  padding: 10px 0px;
 }
 #whatsapp a:link, a:visited {
-    color:black;
+  color:black;
 }
 #whatsapp a {
-    position: relative;
-    z-index: 9999;
+  position: relative;
+  z-index: 9999;
 }
 
 #get-back {
-    font-size: 12px;
-    font-family: Arial, Helvetica, sans-serif;
-    line-height: 15px;
-    animation: swing-in-left-fwd 1.2s linear 0.8s both;
-    padding: 15px 0px;
+  font-size: 12px;
+  font-family: "meiryo", Times;
+  line-height: 15px;
+  animation: swing-in-left-fwd 1.2s linear 0.8s both;
+  padding: 15px 0px;
 }
 @keyframes swing-in-left-fwd {
-    0% {
-      -webkit-transform: rotateY(100deg);
-              transform: rotateY(100deg);
-      -webkit-transform-origin: left;
-              transform-origin: left;
-      opacity: 0;
-    }
-    100% {
-      -webkit-transform: rotateY(0);
-              transform: rotateY(0);
-      -webkit-transform-origin: left;
-              transform-origin: left;
-      opacity: 1;
-    }
+  0% {
+    -webkit-transform: rotateY(100deg);
+            transform: rotateY(100deg);
+    -webkit-transform-origin: left;
+            transform-origin: left;
+    opacity: 0;
   }
+  100% {
+    -webkit-transform: rotateY(0);
+            transform: rotateY(0);
+    -webkit-transform-origin: left;
+            transform-origin: left;
+    opacity: 1;
+  }
+}
 .form {
-    height: auto;  
-    width:100%;
-    padding: 20px 0;
-    position: relative;
-    z-index: 99999;
+  height: auto;  
+  width:100%;
+  padding: 20px 0;
+  position: relative;
+  z-index: 99999;
 }
 .form_inner {
-    width: 90%;
-    height: auto;
-    margin: auto;
-    display:block;
-    box-sizing: border-box;
-    animation: fade-in-bottom 1.2s ease-out 1s forwards;
-    opacity: 0;
+  width: 90%;
+  height: auto;
+  margin: auto;
+  display:block;
+  box-sizing: border-box;
+  animation: fade-in-bottom 1.2s ease-out 1s forwards;
+  opacity: 0;
 }
 
 #form {
-    font-weight:bold;
-    display: inline-block;
-    background-color: #373f51;
-    color:#FEF9EE;
-    font-family: 'Courier New', Courier, monospace;
+  font-weight:bold;
+  display: inline-block;
+  background-color: #373f51;
+  color:#FEF9EE;
+  font-family: 'Courier New', Courier, monospace;
 }
 #name {
-    padding: 5px 25px 5px 30px;
-    
-    display: block;
-    background-color: #fff9ee;
-    border:5px #f4c1b8 solid ;
-    border-bottom: none;
-    width: 80%;
-    font-size: 15px;
-    font-family: "メイリオ";
+  padding: 5px 25px 5px 30px;
+  
+  display: block;
+  background-color: #fff9ee;
+  border:5px #f4c1b8 solid ;
+  border-bottom: none;
+  width: 80%;
+  font-size: 15px;
+  font-family: "メイリオ";
 }
 #email {
-    padding: 5px 25px 5px 30px;
-    display: block;
-    background-color: #fff9ee;
-    border:5px #f4c1b8 solid ;
-    border-bottom: none;
-    width: 80%;
-    font-size: 15px;
-    font-family: "メイリオ";
+  padding: 5px 25px 5px 30px;
+  display: block;
+  background-color: #fff9ee;
+  border:5px #f4c1b8 solid ;
+  border-bottom: none;
+  width: 80%;
+  font-size: 15px;
+  font-family: "メイリオ";
 }
 #inquiry {
-    padding: 5px 25px 5px 30px;
-    padding-bottom: 20px;
-    display: block;
-    background-color: #fff9ee;
-    border:5px #f4c1b8 solid ;
-    width: 80%;
-    font-size: 15px;
-    font-family: "メイリオ";
+  padding: 5px 25px 5px 30px;
+  padding-bottom: 20px;
+  display: block;
+  background-color: #fff9ee;
+  border:5px #f4c1b8 solid ;
+  width: 80%;
+  font-size: 15px;
+  font-family: "メイリオ";
 }
 ::placeholder {
-    font-size: 15px;
-    line-height: 1.4em;
-    font-family: 'Courier New', Courier, monospace;
-    color:#f4c1b8;
-    
+  font-size: 15px;
+  line-height: 1.4em;
+  font-family: 'Courier New', Courier, monospace;
+  color:#f4c1b8;
+  
 }
 #inquiry:focus {
-    padding: 5px 25px 24px 30px;
-    outline: none;
-    font-size: 15px;
-    line-height: 1.4em;
-    font-family: "メイリオ";
-    border-color: #ff40407e;
-    white-space: wrap;
+  padding: 5px 25px 24px 30px;
+  outline: none;
+  font-size: 15px;
+  line-height: 1.4em;
+  font-family: "メイリオ";
+  border-color: #ff40407e;
+  white-space: wrap;
 }
 #name:focus, #email:focus {
-    padding: 5px 25px 7px 30px;
-    outline: none;
-    font-size: 15px;
-    line-height: 1.4em;
-    font-family: "メイリオ";
-    border-color: #ff40407e;
+  padding: 5px 25px 7px 30px;
+  outline: none;
+  font-size: 15px;
+  line-height: 1.4em;
+  font-family: "メイリオ";
+  border-color: #ff40407e;
 }
 
 
 #send {
-    font-size:20px;
-    line-height: 1.4em;
-    padding: 10px 0;
-    margin: 10px auto 0px;
-    display: block;
-    font-family: 'Courier New', Courier, monospace;
-    background-color: #f4c1b8;
-    color: #fff9ee;
-    width:30%;
-    border:none;
+  font-size:20px;
+  line-height: 1.4em;
+  padding: 10px 0;
+  margin: 10px auto 0px;
+  display: block;
+  font-family: 'Courier New', Courier, monospace;
+  background-color: #f4c1b8;
+  color: #fff9ee;
+  width:30%;
+  border:none;
 }
 #send:hover {
-    background-color: #fff9ee;
-    color:#f4c1b8;
+  background-color: #fff9ee;
+  color:#f4c1b8;
 }
 
 @keyframes fade-in-bottom {
-    0% {
-      -webkit-transform: translateY(50px);
-              transform: translateY(50px);
-      opacity: 0;
-    }
-    100% {
-      -webkit-transform: translateY(0);
-              transform: translateY(0);
-      opacity: 1;
-    }
+  0% {
+    -webkit-transform: translateY(50px);
+            transform: translateY(50px);
+    opacity: 0;
   }
-  
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+  }
+}
+
 
 
