--- a/service/css/serviceFLEX900px.css
+++ b/service/css/serviceFLEX900px.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
 }
+
 #page {
   overflow:hidden;
 }
@@ -76,8 +77,16 @@
 li .nav-a {
   text-decoration: none;
   color:#333;
-  font-family: "メイリオ";
-  font-size: 2.222vw;
+  font-family: "meiryo", Times;
+  font-size: 4.444vw;
+}
+
+li .nav-a:link, li .nav-a:visited {
+  color: black;
+}
+
+li .nav-a:active {
+  color:#FEF9EE;
 }
 
  .topnav {
@@ -104,37 +113,37 @@ li .nav-a {
 
 /* The navigation menu links */
 .topnav.responsive #firstchild {
-    padding: 14vw 0.741vw 2vw;
+    padding: 14vw 0.541vw 2vw;
    
-    font-family: "メイリオ";
-    font-size: 2.222vw;
+    font-family: "meiryo", Times;
+    font-size: 4.444vw;
     
     display: block;
     transition: 0.3s;
     border-bottom: 1px solid #FF4040;
-    margin: 0px 30px;
+    margin: 0px 20px;
   }
   .topnav.responsive #lastchild {
-    padding: 2vw 0.741vw 2vw;
+    padding: 2vw 0.541vw 2vw;
    
-    font-family: "メイリオ";
-    font-size: 2.222vw;
+    font-family: "meiryo", Times;
+    font-size: 4.444vw;
     border-bottom: 1px solid #FF4040;
     display: block;
     transition: 0.3s;
-    margin: 0px 30px;
+    margin: 0px 20px;
   }
   
   .topnav.responsive  #second,.topnav.responsive #third, .topnav.responsive #fourth {
-    padding: 2vw 0.741vw 2vw;
+    padding: 2vw 0.541vw 2vw;
    
-    font-family: "メイリオ";
-    font-size: 2.222vw;
+    font-family: "meiryo", Times;
+    font-size: 4.444vw;
     
     display: block;
     transition: 0.3s;
     border-bottom: 1px solid #FF4040;
-    margin: 0px 30px;
+    margin: 0px 20px;
   }
 /*our serivce content*/
 .dropdown {
@@ -145,8 +154,8 @@ li .nav-a {
 #dropdown-content-mobile {
   display: none;
   background-color: #F4C1B8;
-  font-family: "メイリオ";
-  font-size: 16px;
+  font-family: "meiryo", Times;
+  font-size: 4.444vw;
   width: 250px;
   padding: 5px;
   overflow: visible;
@@ -154,10 +163,10 @@ li .nav-a {
 
 }
 .item {
-  padding: 2vw 0.741vw 2vw;
+  padding: 2vw 0.541vw 2vw;
  text-decoration: none;
-  font-family: "メイリオ";
-  font-size: 2vw;
+ font-family: "meiryo", Times;
+  font-size: 4vw;
   color: #333;
   transition: 0.3s;
   display: block;
@@ -165,9 +174,10 @@ li .nav-a {
 
 #fafacon{
   float: left;
-  line-height:16px;
-  font-size: 2.222vw;
+  line-height:4.2vw;
+  font-size: 4vw;
   vertical-align: middle;
+  padding-top: 3px;
 }
 #center {
   float: left;
@@ -182,20 +192,25 @@ li .nav-a {
 
 /* language button */
 .lang-switch {
-  padding-top: 70vw;
+  padding-top: 40vw;
   margin: 0 0;
   text-align: center;
+  
+ 
 }
 .lang-switch a {
   text-decoration: none;
-  font-family: "メイリオ";
-  font-size: 2vw;
+  font-family: "meiryo", Times;
+  font-size: 4vw;
   color:#333;
+
 }
 .opabox {
   width: 100%;
-  height: 5.224vw;
+  height: 8.224vw;
   background-color: rgba(189, 153, 147, 0.3);
+  vertical-align: middle;
+  padding-top: 2vw;
 }
 #whataspp-QR, .dropdownT {
   display: none;
@@ -217,114 +232,153 @@ li .nav-a {
   color:#FF4040;
 }
 
+
 /*---BODY---*/
+.wrapper {
+  display: grid;
+  grid-template: 250px 95px auto/1fr;
+  /*border:1px solid black;*/
+  height:auto;
+  width: 100%;
+  box-sizing: border-box;
+}
 
+.box {
+  padding: 0;
+  font-size: 4.5vw;
+  line-height: 1.4em;
+  font-family: "meiryo", Times;
+  font-weight:700;
+  /*border: 1px solid black;*/
+  text-align: left;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
 
-#bg {
-  background-image: url("../img/service-bg.jpg");
-  background-color: #ccc;
+.a {
+  grid-area: 1/1/2/2;
+  object-fit: cover;
+}
+.b {
+  grid-area: 2/1/3/2;
+  background-color: #FEF9EE;
+}
+.size-b {
+  display: block ;
+  padding-top: 8vw;
+  object-fit: contain;
+  width: 89vw;
+  height: auto;
+  max-width: 650px;
+  animation: bouncing 1.5s ease-in-out both;
+}
+.c {
+  grid-area: 3/1/4/2;
+  background-color: #FEF9EE;
+}
+/*.d {
+  grid-column: 4/5;
+  grid-row: 2/3;
+}
+.e {
+  grid-column: 3/4;
+  grid-row: 3/4;
+}
+.f {
+  grid-column: 4/5;
+  grid-row: 3/4;
+}
+*/
+.bg{
+  background-image: url("../img/shutterstock_1334391230.jpg");
   margin: 0 0;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  /*position: relative;*/
-  width:100%; 
-  height:auto; 
-  z-index: 0;
-  display: block;
   object-fit: cover;
+  height: auto;
 }
-
-.logo {
-  grid-area: logo;
-
-}
-#img-size {
-  height: 190px;
-  width: 190px;
-  margin:auto;
-  display: block;
-}
-
-.content1, .content2, .content3, .content4 {
-  width:90%;
-  height:auto;
-}
-.icon-size {
-  /*opacity: 1;*/
-  width:140px;
-  height:120px;
-  margin:auto;
-  display: block;
-  border-radius: 10px;
-}
-.icon {
-  transition: 0.5s ease;
-  /*backface-visibility: visible;*/
-  border-radius: 10px;
-}
-.transp-box {
-  width:140px;
-  height:120px;
-  border-radius: 10px;
-  background-color: rgba(237, 100, 112, 0);
-}
-
-.just-be-fit:hover .transp-box{
-  background-color: rgba(237, 100, 112, 0.2);
-  width:140px;
-  height:120px;
-  border-radius: 10px;
-}
-
-.just-be-fit:hover .icon-size{
-  opacity: 0.3;
-  border-radius: 10px;
-}
-
-.just-be-fit {
-  display: block;
-  width:140px;
-  height:120px;
-  margin:auto;
-  border-radius: 10px;
-}
-.service{
-  display:flex;
-  justify-content:space-evenly;
-  align-items:center;
-  flex-direction: column;
-  flex-wrap: wrap;
-}
-
-/*.service-name,.service-intro {
-  transform:translate(0, 50px);
-}*/
-
-.service-intro {
-  overflow: wrap;
-  text-align:center;
-  font-size: 15px;
-  font-family: "メイリオ", Helvetica, sans-serif;
-  font-weight: 500;
-  width: 75%;
-  margin:auto;
-  line-height: 2.5;
-  flex:1 1 auto;
-  padding-bottom: 30px;
-}
-
-.service-name {
-  text-align:center;
-  font-size: 18px;
-  font-family: "メイリオ", Helvetica, sans-serif;
-  font-weight: 500;
-  flex:1 1 auto;
-  margin: 30px 0px;
-}
-
-.grid-container{
+.container {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
+  align-content: space-around;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+  padding: 8vw;
 }
+.what-we-do {
+  background-color: white;
+  height: auto;
+  width: auto;
+  border-radius: 25px;
+  box-shadow: 3px 3px 10px #ffeac2, -3px -3px 10px #ffeac2;
+  margin: 10px;
+  padding: 5.4vw;
+
+}
+.cate {
+  text-align: center;
+  font-size: 4vw;
+}
+.service {
+  text-align: left;
+  font-size: 3.5vw;
+}
+@keyframes bouncing {
+  0% {
+    transform-origin: 0% 0%;
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+    opacity: 0;
+  }
+  38% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+    opacity: 1;
+  }
+  55% {
+    -webkit-transform: scale(0.7);
+            transform: scale(0.7);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  72% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  81% {
+    -webkit-transform: scale(0.84);
+            transform: scale(0.84);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  89% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  95% {
+    -webkit-transform: scale(0.95);
+            transform: scale(0.95);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  100% {
+    transform-origin: 0% 0%;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+}
+
